<resources>
    <string name="app_name">MVVMProject</string>
    <!-- hint -->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="register">Register</string>
    <string name="create_new_account">create new account</string>

    <!-- dialog message -->
    <string name="login_failed_empty">incorrect username or password</string>
    <string name="image_uri">Image Uri</string>
    <string name="register_failed_unknown">Could not create an account. Please try again later</string>
</resources>